--- a/.env.SAMPLE
+++ b/.env.SAMPLE
@@ -1,3 +1,3 @@
-GOOGLE_CLIENT_ID=see-instructions-in-readme
-GOOGLE_CLIENT_SECRET=see-instructions-in-readme
-ADMIN_EMAILS=phtcon@ucsb.edu
+GOOGLE_CLIENT_ID=166425754157-da8hg31jhqcavbntdqfiuhtmbau5gqg7.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+ADMIN_EMAILS=phtcon@ucsb.edu,hansonyu@ucsb.edu
